--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,9 @@ services:
   - redis-server
 env:
   - GO111MODULE=on
+before_install:
+  - go get golang.org/x/tools/cmd/cover
+  - go get github.com/mattn/goveralls
+script:
+  - go test -v -covermode=count -coverprofile=coverage.out
+  - goveralls -coverprofile=coverage.out -service=travis-ci
