--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,8 @@ services:
   - redis-server
 env:
   - GO111MODULE=on
-before_install:
-  - go get golang.org/x/tools/cmd/cover
+after_success:
+  - go get golang.org/x/tools/cmd/cover 
   - go get github.com/mattn/goveralls
-script:
-  - go test ./... -v
   - go test -coverprofile=coverage.out
   - goveralls -coverprofile=coverage.out -service=travis-ci
