--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,8 @@
 language: go
 go:
-  - 1.14.x
-  - 1.15.x
+  - 1.16.x
 services:
-  - redis-server
-env:
-  - GO111MODULE=on
+  - redis
 after_success:
   - go get golang.org/x/tools/cmd/cover 
   - go get github.com/mattn/goveralls
